Insights mobile layout issues

--- a/resources/styles/sections/header.scss
+++ b/resources/styles/sections/header.scss
@@ -167,7 +167,7 @@ section.page-header {
 
     @media screen and (max-width: 860px) {
       width: auto;
-      margin: 2rem;
+      margin: 6rem 2rem 2rem 2rem;
     }
 
     .breadcrumb {
